Update 1. GitHub Revision.md

--- a/1. GitHub Revision.md
+++ b/1. GitHub Revision.md
@@ -489,3 +489,301 @@ d7a3ddb Added README
 and here you go... you will get timewise log history regardless of dev & master branch.
 
 ```
+
+
+
+
+
+#Your Practice tasks :
+
+```
+*Creating an instance and a folder/ files in it.
+-----------------------------------------------
+Create EC2 instance of Ubuntu. 
+Create a 'Scripts' folder in it.
+Create 4 .txt files in 'Scripts' folder. 
+	- 1. gabbar_vs_thakur.txt 2. jai_vs_veeru.txt
+	- 3. Kalia_vs_Bheem.txt   4. Kirmada_vs_Krishna.txt
+
+*Initializing Empty git repo and adding file in it:
+-----------------------------------------------
+Initialise the empty git repo (folder) in the 'Scripts' folder.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git init 
+Check the status of all the files whether there are in which stage ?
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git status 
+        - (You can see all the file in Red color i.e Untracked.)
+Move 'gabbar_vs_thakur.txt' from 'Untracked' to 'Staged'.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git add gabbar_vs_thakur.txt
+Validate the file is in 'Staged' state or not.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git status
+	- The file should be Green in color.
+Move 'jai_vs_veeru.txt' file in 'Staged' state.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git add jai_vs_veeru.txt
+Ohh but this file don't need to be added in 'Staged', move it back to 'Untracked'
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git rm --cached jai_vs_veeru.txt
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git status
+	- This file should be Red in color now. 
+Move 'gabbar_vs_thakur.txt' from 'Staged' to 'Tracked'.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git commit -m "Adding Sholey movie script"
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git status
+Delete the 'gabbar_vs_thakur.txt' file from 'Scripts' folder.
+Now you need to restore that file using Version Control.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git status
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git restore gabbar_vs_thakur.txt
+	- ubuntu@ip-172-31-46-232:~/Scripts$ ls
+
+
+*Configuring the user :
+-----------------------------------------------
+ubuntu@ip-172-31-46-232:~/Scripts$ git config --global user.name BhimsenK
+ubuntu@ip-172-31-46-232:~/Scripts$ git config --global user.email kulkarnibhimsen4@gmail.com
+
+
+*Creating and adding a README.md file:
+-----------------------------------------------
+ubuntu@ip-172-31-46-232:~/Scripts$ touch README.md
+ubuntu@ip-172-31-46-232:~/Scripts$ git add README.md
+ubuntu@ip-172-31-46-232:~/Scripts$ git status
+
+*Creating a 'Dev' branch and adding new files into it : 
+-----------------------------------------------
+Create a new 'Dev' branch.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git checkout -b dev
+Create a file i.e 'from_dev.txt', and add some content in it. 
+	- ubuntu@ip-172-31-46-232:~/Scripts$ vim from_dev.txt
+	- ubuntu@ip-172-31-46-232:~/Scripts$ ls
+Add this file in Dev branch and commit it.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git add from_dev.txt
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git commit -m "Added dev file"
+Now go to 'master' branch and check the 'from_dev.txt' is there or not.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git checkout master
+	- ubuntu@ip-172-31-46-232:~/Scripts$ ls
+
+
+*Merging 'Dev' branch into 'Master' branch:
+-----------------------------------------------
+Then first you need to go into the master branch.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git checkout master
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git merge dev 
+	- ubuntu@ip-172-31-46-232:~/Scripts$ ls
+You will be getting the 'Dev' branch file in 'master'.
+
+
+*Setting up the env/token to push the files to Github.
+-----------------------------------------------
+
+*Set the token in github and save it with you 
+- - - - - - - - - - - - - - 
+Go to the settings of profile. 
+Click on 'Developer Settings'. select ('Tokens' classic)
+give full repo permissions to it.
+Once token is created, then copy and paste it somewhere (the toaken will once show up once.)
+
+*set the remote repo
+- - - - - - - - - - - - - - 
+Check if the current local repo is being connected with any remote repo or not.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git remote -v
+	- ubuntu@ip-172-31-46-232:~/Scripts$ 
+
+*set the token 
+- - - - - - - - - - - - - - 
+Set the token into origin
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git remote set-url https://{paste-the-copied-token-here/}@github.com/{your-username/your-repo-name.git}
+	- e.g "ubuntu@ip-172-31-46-232:~/Scripts$ git remote set-url origin https://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@github.com/BhimsenK/demo-shell-scripts.git"
+
+
+*Local repo to Remote repo:
+-----------------------------------------------
+Create a new repo in Github (online) named "demo-shell-scripts"
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git push origin master
+
+*From Remote repo to Local repo:
+-----------------------------------------------
+Create a file named 'From_remote.txt' in remote repo through Github GUI.
+(Its present in remote repo, you need to show this in your local repo.)
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git pull origin master
+	- ubuntu@ip-172-31-46-232:~/Scripts$ ls
+You should be seen that remote file into your local repo now.
+
+
+
+*Cloning remote repo into Local:
+-----------------------------------------------
+
+  *. Through SSH
+- - - - - - - - - - - - - - - -
+Come out of the Script folder.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ cd ..
+Now create a key in instance using keygen command.
+	- ubuntu@ip-172-31-46-232:~$ ssh-keygen
+Now go into the .ssh folder and check the files.
+	- ubuntu@ip-172-31-46-232:~$ cd .ssh
+	- ubuntu@ip-172-31-46-232:~/.ssh$ ls
+	  authorized_keys  id_ed25519  id_ed25519.pub
+Now open the public key and copy the key.
+	- ubuntu@ip-172-31-46-232:~/.ssh$ cat id_ed25519.pub
+	  ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIGZ1diFeidEWSxkXnsTyb4eR1A+1TC+Ue7nf2p2tM09p ubuntu@ip-172
+Now open Github >> settings >> SSH & KPG keys >> New SSH key >> give a name to a key and add the key name copied from instance and paste it here. and save it. 
+
+Open any public repo you want to have it in your local, Then click on 'Code' and select the ssh URL. 
+
+Now, come out of the 'Scripts' folder and create a new folder named i.e github_repo
+	- ubuntu@ip-172-31-46-232:~$ mkdir github_repo
+	- ubuntu@ip-172-31-46-232:~$ ls
+	  Scripts  github_repo
+	- ubuntu@ip-172-31-46-232:~$ cd github_repo/
+	- ubuntu@ip-172-31-46-232:~/github_repo$ git clone git@github.com:LondheShubham153/90DaysOfDevOps.git
+And its done. You can now see your git repo on your local. 
+
+
+
+
+*update your repo with new/ old file with some updates
+-----------------------------------------------
+Clone any of your repo, create a new file in it and apply the changes
+into remote repo.
+Come outof the Scripts or any other folder and create a new folder. And clone
+your repo in it.
+Suppose your cloning repo has only one file.
+
+	- ubuntu@ip-172-31-46-232:~/<YOUR_NEW_FOLDER>$ ls
+	  README.md
+
+here, just modify the 'README.md'
+Note : See on which branch you are now currently.
+
+	- ubuntu@ip-172-31-46-232:~/<YOUR_NEW_FOLDER>$ vim README.md
+update this or add some content in it. 
+
+Now push the changes into remote repo 
+	- ubuntu@ip-172-31-46-232:~/<YOUR_NEW_FOLDER>$ git status
+	- ubuntu@ip-172-31-46-232:~/<YOUR_NEW_FOLDER>$ git add README.md
+	- ubuntu@ip-172-31-46-232:~/<YOUR_NEW_FOLDER>$ git commit -m "Adding updated README.md in remote repo"
+	- ubuntu@ip-172-31-46-232:~/<YOUR_NEW_FOLDER>$ git push origin main
+we are pushing into main cause the current branch is 'main' in the repo.
+You can create any new branch if you want.
+
+
+You are now ready to go into Next Level.
+
+*Fork-Clone-Modify
+-----------------------------------------------
+Note : Github to github repo copy >> fork
+       Github to local  repo      >> clone
+
+Fork the 90DaysOfDevOps remote repo or any other public repo.
+	- Note : Once you fork any repo, it become your repo now (copy of original repo)
+Then clone it to your local repo. 
+Update any file in it. 
+Then push the changes into remote repo. 
+
+
+
+
+
+Solo Levelling : GitHub Advance 
+========================================================================
+
+
+*Using new Auth-token:
+-----------------------------------------------
+Delete the Auth-token we have been added and using for our github.
+Now try to push the local repo into remote repo. You will face error.
+Generate New token and copy it somewhere.
+
+Set the token.
+	- Go to 'Scripts' folder.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git remote set-url origin https://{REPLACE-YOUR-TOKEN-HERE}@github.com/BhimsenK/demo-shell-scripts.git
+Test the connection.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git push --dry-run origin master
+Once its good, push the new changes to git remote repo.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git push origin master
+
+
+
+*Adding 'dev' branch repo into remote repo:
+-----------------------------------------------
+Scene : You are having a 'Dev' & 'master' branch on local repo. But on remote repo,
+        you are having only 'master' branch. And you want to add your 'demo' branch
+	from local to remote repo.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git branch
+	   dev
+	 * master
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git switch dev
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git branch
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git status
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git push origin dev
+Now refresh the GitHub on browser and you can see the 'dev' branch also been added to it.
+
+
+*Reverting a particular commit:
+-----------------------------------------------
+
+*Within same file
+- - - 
+Create a file and Add some changes and do 3 commits. named as 'cmt 1', 'cmt 2' & 'cmt 3'
+
+	- ubuntu@ip-172-31-46-232:~/Scripts$ vim from_dev.txt
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git add from_dev.txt
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git commit -m "cmt 1"
+Likewise for all 3 commits.
+Check the logs
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git log --oneline
+	 f541889 (HEAD -> dev) Added a fine commit
+	 cf4d956 added a wrong commit
+	 3b3a6f6 adding a fine commit"
+We need to rever the 'cf4d956' this commit.
+Revert the commit.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git revert cf4d956
+	  CONFLICT (content): Merge conflict in from_dev.txt
+You will get an error.
+So open the file, and update/ remove the changes you want and use below command.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git revert --continue
+
+
+*with different files
+- - -
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git log --oneline
+            cf4d956 added a wrong commit
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git revert cf4d956
+
+
+
+*Stashing:
+-----------------------------------------------
+Scenario : WORK IN PROGRESS
+           You are developing a script. You have added the initial script (whatever has been developed yet.)
+           You are developing the code, but you are not sure whether its the 
+           correct or not. You might change it later ydk.
+
+Go into the 'dev' branch.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git checkout dev
+Do some modifications in the files and add it without commit.
+Now try to go into 'master' branch.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git checkout master
+	You will face error, as you were working in another branch and without
+	commiting anything you wanted to switch so.
+Save the updation/ modification in dev branch.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git stash
+Go to 'master' branch and came back to 'dev'.
+And now fetch the last saved stash.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git stash pop
+Now you can see the files with your modifications.
+
+
+*cherrypicking : 
+------------------------------------------------
+(if we merge 2 branchs then all the commits will merge. 
+But if want to merge only a specific commit then cherry-pick comes in picture.)
+
+Go into 'dev' branch. Create and commit a new file there as 'Adding commit for master branch'.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git log --oneline
+	  9ad3c41 (HEAD -> dev) Adding commit for master branch  (your commit)
+Go into 'master' branch.
+Cherry-pick the particular commit.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git cherry-pick 9ad3c41
+Now check the log history.
+	- ubuntu@ip-172-31-46-232:~/Scripts$ git log --oneline
+	You can now see the file/ commit in your 'master' branch
+
+```
