Update 1. GitHub Revision.md

--- a/1. GitHub Revision.md
+++ b/1. GitHub Revision.md
@@ -126,9 +126,9 @@ So now go to the repo you have created and click on 'code'. Now select/ copy the
 ubuntu@ip-172-31-46-232:~/Scripts$ git remote add origin <paste-the-copied-HTTPS-URL>
 
 Now if you push the files now, then it will ask for the credentials. so now set the URL with auth token.
-ubuntu@ip-172-31-46-232:~/Scripts$ git remote set-url https://{paste-the-copied-token-here/}@github.com/{your-username/your-repo-name.git}
+ubuntu@ip-172-31-46-232:~/Scripts$ git remote set-url origin https://{paste-the-copied-token-here/}@github.com/{your-username/your-repo-name.git}
 e.g 
-ubuntu@ip-172-31-46-232:~/Scripts$ git remote set-url https://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/@github.com/BhimsenK/demo-shell-script.git
+ubuntu@ip-172-31-46-232:~/Scripts$ git remote set-url origin https://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/@github.com/BhimsenK/demo-shell-script.git
 
 ubuntu@ip-172-31-46-232:~/Scripts$ git push origin master
 This will add the local dir data into public repo.
